...
                            .fillMaxWidth()
                            .padding(vertical = 8.dp),
                        horizontalArrangement = Arrangement.SpaceBetween,
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Text(
                            "VinylWave",
                            fontWeight = FontWeight.Bold,
                            fontSize = 24.sp
                        )
                        CircleIcon()
                    }
                },
...
                    onClick = onAddClick,
                    containerColor = CoveOrange,
                    shape = CircleShape
                ) {
                    Icon(
                        imageVector = Icons.Default.Add,
                        contentDescription = "Agregar álbum"
                    )
                }
            }
        }
    ) { paddingValues ->
        Box(
...
